Исправлены теги, добавлены шрифты, поправлены классы

--- a/maket.html
+++ b/maket.html
@@ -7,33 +7,35 @@
     </head>
     <body>
         <nav class="menu">
-            <div class="menu-item">
-                <a href="/" class="menu-item__image">
-                    <img src="images/burger.png">
-                </a>
-            </div>
-            <div class="menu-item">
-                <a href="/" class="menu-item__image">
-                    <img src="images/Group.png">
-                </a>
-            </div>
-            <div class="menu-divider">
-            </div>
-            <div class="menu-item">
-                <a href="/" class="menu-item__image">
+            <ul type="none" class="menu-block">
+                <li class="menu-item">
+                    <a href="/" class="menu-item__image">
+                        <img src="images/burger.png">
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="/" class="menu-item__image">
+                        <img src="images/Group.png">
+                    </a>
+                </li>
+                <li class="menu-item menu-item--divider">
+                </li>
+                <li class="menu-item">
+                    <a href="/" class="menu-item__image">
                     <img src="images/repair.png">
-                </a>
-            </div>
-            <div class="menu-item">
-                <a href="/" class="menu-item__image">
-                    <img src="images/checkstatus.png">
-                </a>
-            </div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="/" class="menu-item__image">
+                        <img src="images/checkstatus.png">
+                    </a>
+                </li>
+            </ul>
         </nav>
         <main class="main-info">
             <div class="title">
                 <div class="title__highlight"></div>
-                <div class="title__text">Услуги и сервисы</div>
+                <h1 class="title__text">Услуги и сервисы</h1>
             </div>
             <nav class="nav">
                 <div class="nav-item nav-item--selected">
@@ -62,14 +64,14 @@
                     </a>
                 </div>
             </nav>
-            <div class="text">
-                <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell 
-                    с официальной гарантией производителя.</p>
-            </div>
-            <div class="button">
-                <button class="button__image"><img src="images/expand.png"></button>
-                <div class="button__text">Читать далее</div>
-            </div>
+            <section class="text">
+                Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell 
+                    с официальной гарантией производителя.
+            </section>
+            <button class="button">
+                <img src="images/expand.png" class="button__image"> 
+                <span class="button__text">Читать далее</span>
+            </button>
             <div class="image">
                 <img src="images/_MG_3223.png">
             </div>
