добавила теги для width768

--- a/maket.html
+++ b/maket.html
@@ -13,9 +13,26 @@
                         <img src="images/burger.png">
                     </a>
                 </li>
+                <li class="menu-item menu-item--divider">
+                </li>
                 <li class="menu-item">
                     <a href="/" class="menu-item__image">
                         <img src="images/Group.png">
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="/" class="menu-item__image">
+                    <img src="images/call.png">
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="/" class="menu-item__image">
+                    <img src="images/chat.png">
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="/" class="menu-item__image">
+                    <img src="images/profile.png">
                     </a>
                 </li>
                 <li class="menu-item menu-item--divider">
@@ -65,8 +82,10 @@
                 </div>
             </nav>
             <section class="text">
-                Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell 
-                    с официальной гарантией производителя.
+                <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell 
+                    с официальной гарантией производителя.</p>
+                    <p> Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных 
+                        клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
             </section>
             <button class="button">
                 <img src="images/expand.png" class="button__image"> 
