--- a/maket.html
+++ b/maket.html
@@ -39,11 +39,13 @@
                 </li>
                 <li class="menu-item">
                     <a href="/" class="menu-item__image">
+                    <span class="menu-item__text menu-item__text--hidden"> Оставить заявку </span> 
                     <img src="images/repair.png">
                     </a>
                 </li>
                 <li class="menu-item">
                     <a href="/" class="menu-item__image">
+                        <span class="menu-item__text menu-item__text--hidden"> Статус ремонта </span> 
                         <img src="images/checkstatus.png">
                     </a>
                 </li>
@@ -78,6 +80,16 @@
                 <li class="nav-item nav-item--hover">
                     <a href="/" class="nav-item__text">
                         Специальные цены
+                    </a>
+                </li>
+                <li class="nav-item nav-item--hover">
+                    <a href="/" class="nav-item__text">
+                        Ремонтируемые бренды
+                    </a>
+                </li>
+                <li class="nav-item nav-item--hover">
+                    <a href="/" class="nav-item__text">
+                        Отзывы
                     </a>
                 </li>
             </ul>
