--- a/maket.html
+++ b/maket.html
@@ -6,110 +6,116 @@
         <title> Макет Figma</title>
     </head>
     <body>
-        <nav class="menu">
-            <ul type="none" class="menu-block">
-                <li class="menu-item">
-                    <a href="/" class="menu-item__image">
-                        <img src="images/burger.png">
-                    </a>
-                </li>
-                <li class="menu-item menu-item--divider menu-item--hidden">
-                </li>
-                <li class="menu-item">
-                    <a href="/" class="menu-item__image">
-                        <img src="images/Group.png">
-                    </a>
-                </li>
-                <li class="menu-item menu-item--hidden ">
-                    <a href="/" class="menu-item__image">
-                    <img src="images/call.png">
-                    </a>
-                </li>
-                <li class="menu-item menu-item--hidden">
-                    <a href="/" class="menu-item__image">
-                    <img src="images/chat.png">
-                    </a>
-                </li>
-                <li class="menu-item menu-item--hidden">
-                    <a href="/" class="menu-item__image">
-                    <img src="images/profile.png">
-                    </a>
-                </li>
-                <li class="menu-item menu-item--divider">
-                </li>
-                <li class="menu-item">
-                    <a href="/" class="menu-item__image">
-                    <span class="menu-item__text menu-item__text--hidden"> Оставить заявку </span> 
-                    <img src="images/repair.png">
-                    </a>
-                </li>
-                <li class="menu-item">
-                    <a href="/" class="menu-item__image">
-                        <span class="menu-item__text menu-item__text--hidden"> Статус ремонта </span> 
-                        <img src="images/checkstatus.png">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <main class="main-info">
-            <div class="title">
-                <div class="title__highlight"></div>
-                <h1 class="title__text">Услуги и сервисы</h1>
-            </div>
-            <ul type="none" class="nav">
-                <li class="nav-item nav-item--hover">
-                    <a href="/" class="nav-item__text">
-                        Ремонтируемые устройства 
-                    </a>
-                </li>
-                <li class="nav-item nav-item--hover">
-                    <a href="/" class="nav-item__text">
-                        Дополнительные услуги
-                    </a>
-                </li>
-                <li class="nav-item nav-item--hover">
-                    <a href="/" class="nav-item__text">
-                        Цены на услуги
-                    </a>
-                </li>
-                <li class="nav-item nav-item--hover">
-                    <a href="/" class="nav-item__text">
-                        Адреса сервисных центров
-                    </a>
-                </li>
-                <li class="nav-item nav-item--hover">
-                    <a href="/" class="nav-item__text">
-                        Специальные цены
-                    </a>
-                </li>
-                <li class="nav-item nav-item--hover">
-                    <a href="/" class="nav-item__text">
-                        Ремонтируемые бренды
-                    </a>
-                </li>
-                <li class="nav-item nav-item--hover">
-                    <a href="/" class="nav-item__text">
-                        Отзывы
-                    </a>
-                </li>
-            </ul>
-            <div class="description-block">
-                <div class="text-block">
-                    <section class="text">
-                        <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell 
-                            с официальной гарантией производителя.</p>
-                        <p> Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных 
-                            клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
-                    </section>
-                    <button class="button">
-                        <img src="images/expand.png" class="button__image"> 
-                        <span class="button__text">Читать далее</span>
-                    </button>
+        <div class="page-container">
+            <nav class="menu">
+                <div class="title title--hidden">
+                    <div class="title__highlight"></div>
+                    <h1 class="title__text">Услуги и сервисы</h1>
                 </div>
-                <div class="image">
-                    <img src="images/_MG_3223.png">
+                <ul type="none" class="menu-block">
+                    <li class="menu-item menu-item--hidden-for-width1120">
+                        <a href="/" class="menu-item__image">
+                            <img src="images/burger.png">
+                        </a>
+                    </li>
+                    <li class="menu-item menu-item--divider menu-item--hidden menu-item--hidden-for-width1120">
+                    </li>
+                    <li class="menu-item menu-item--hidden-for-width1120">
+                        <a href="/" class="menu-item__image">
+                            <img src="images/Group.png">
+                        </a>
+                    </li>
+                    <li class="menu-item menu-item--hidden menu-item--hidden-for-width1120">
+                        <a href="/" class="menu-item__image">
+                        <img src="images/call.png">
+                        </a>
+                    </li>
+                    <li class="menu-item menu-item--hidden menu-item--hidden-for-width1120">
+                        <a href="/" class="menu-item__image">
+                        <img src="images/chat.png">
+                        </a>
+                    </li>
+                    <li class="menu-item menu-item--hidden menu-item--hidden-for-width1120">
+                        <a href="/" class="menu-item__image">
+                        <img src="images/profile.png">
+                        </a>
+                    </li>
+                    <li class="menu-item menu-item--divider menu-item--hidden-for-width1120">
+                    </li>
+                    <li class="menu-item menu-item--visible-for-width1120">
+                        <a href="/" class="menu-item__image menu-item__image--hidden">
+                        <span class="menu-item__text menu-item__text--hidden">Оставить заявку</span> 
+                        <img src="images/repair.png">
+                        </a>
+                    </li>
+                    <li class="menu-item menu-item--visible-for-width1120">
+                        <a href="/" class="menu-item__image menu-item__image--hidden">
+                            <span class="menu-item__text menu-item__text--hidden">Статус ремонта</span> 
+                            <img src="images/checkstatus.png">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <main class="main-info">
+                <div class="title">
+                    <div class="title__highlight"></div>
+                    <h1 class="title__text">Услуги и сервисы</h1>
                 </div>
-            </div>
-        </main>
+                <ul type="none" class="nav">
+                    <li class="nav-item nav-item--hover">
+                        <a href="/" class="nav-item__text">
+                            Ремонтируемые устройства 
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item--hover">
+                        <a href="/" class="nav-item__text">
+                            Дополнительные услуги
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item--hover">
+                        <a href="/" class="nav-item__text">
+                            Цены на услуги
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item--hover">
+                        <a href="/" class="nav-item__text">
+                            Адреса сервисных центров
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item--hover">
+                        <a href="/" class="nav-item__text">
+                            Специальные цены
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item--hover">
+                        <a href="/" class="nav-item__text">
+                            Ремонтируемые бренды
+                        </a>
+                    </li>
+                    <li class="nav-item nav-item--hover">
+                        <a href="/" class="nav-item__text">
+                            Отзывы
+                        </a>
+                    </li>
+                </ul>
+                <div class="description-block">
+                    <div class="text-block">
+                        <section class="text">
+                            <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell 
+                                с официальной гарантией производителя.</p>
+                            <p> Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных 
+                                клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
+                        </section>
+                        <button class="button">
+                            <img src="images/expand.png" class="button__image"> 
+                            <span class="button__text">Читать далее</span>
+                        </button>
+                    </div>
+                    <div class="image">
+                        <img src="images/_MG_3223.png">
+                    </div>
+                </div>
+            </main>
+        </div>    
     </body>
 </html>
