изменен адрес изображения

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul type="none" class="menu-block">
                     <li class="menu-item menu-item--hidden-for-width1120">
                         <a href="/" class="menu-item__image">
-                            <img src="images/burger.png">
+                            <img src="/images/burger.png">
                         </a>
                     </li>
                     <li class="menu-item menu-item--divider menu-item--hidden menu-item--hidden-for-width1120">
@@ -112,7 +112,7 @@
                         </button>
                     </div>
                     <div class="image">
-                        <img src="images/_MG_3223.png">
+                        <img src="/images/_MG_3223.png" alt="Логотип компании">
                     </div>
                 </div>
             </main>
