Изменила точки в адресе изображения

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </button>
                     </div>
                     <div class="image">
-                        <img src="../images/_MG_3223.png" alt="Логотип компании">
+                        <img src="./images/_MG_3223.png" alt="Логотип компании">
                     </div>
                 </div>
             </main>
