--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </button>
                     </div>
                     <div class="image">
-                        <img src="/images/logo.png" alt="Логотип компании">
+                        <img src="./images/logo.png" alt="Логотип компании">
                     </div>
                 </div>
             </main>
