--- a/side-bar.html
+++ b/side-bar.html
@@ -12,18 +12,18 @@
             <nav class="navigation-links"> 
                 <a href="#"><img src="/images/close.png" alt="Закрыть сайд-бар"></a>
                 <a href="#"><img src="/images/Group.png" alt="Логотип компании"></a>
-                <a href="#"><img src="/images/search.png" alt="Поиск по сайту"></a>
+                <a href="#"><img src="/images/search.png" alt="Поиск по сайту" class="navigation-links__third-link"></a>
             </nav>
             <nav class="navigation-list">
-                <ul>
-                    <li><a href="#">Ремонт техники</a></li>
-                    <li><a href="#">Услуги и сервисы</a></li>
-                    <li><a href="#">Корпоративным клиентам</a></li>
-                    <li><a href="#">Продавцам техники</a></li>
-                    <li><a href="#">Партнерам</a></li>
-                    <li><a href="#">Производителям</a></li>
-                    <li><a href="#">Наши сервисные центры</a></li>
-                    <li><a href="#">Контакты</a></li>
+                <ul class="services-list">
+                    <li class="services-list__item services-list__item--active"><a class="services-list__link services-list__link--active" href="#">Ремонт техники</a></li>
+                    <li class="services-list__item"><a class="services-list__link" href="#">Услуги и сервисы</a></li>
+                    <li class="services-list__item"><a class="services-list__link" href="#">Корпоративным клиентам</a></li>
+                    <li class="services-list__item"><a class="services-list__link" href="#">Продавцам техники</a></li>
+                    <li class="services-list__item"><a class="services-list__link" href="#">Партнерам</a></li>
+                    <li class="services-list__item"><a class="services-list__link" href="#">Производителям</a></li>
+                    <li class="services-list__item"><a class="services-list__link" href="#">Наши сервисные центры</a></li>
+                    <li class="services-list__item"><a class="services-list__link" href="#">Контакты</a></li>
                 </ul>
             </nav>
         </header>
@@ -33,12 +33,14 @@
                 <a href="#"><img src="/images/chat.png" alt="Написать нам"></a>
                 <a href="#"><img src="/images/profile.png" alt="Профиль"></a>
             </nav>
-            <p>mail@cps.com</p>
-            <p>8 800 890 8900</p>
+            <section class="contact-info"> 
+                <p class="contact-info__mail">mail@cps.com</p>
+                <p class="contact-info__phone">8 800 890 8900</p>
+            </section>
             <nav class="lang-navigation">
-                <a href="#"><span>RU</span></a>
-                <a href="#"><span>EN</span></a>
-                <a href="#"><span>CH</span></a>
+                <a class="lang-navigation__lang-link lang-navigation__lang-link--active" href="#"><span>ru</span></a>
+                <a class="lang-navigation__lang-link" href="#"><span>en</span></a>
+                <a class="lang-navigation__lang-link" href="#"><span>ch</span></a>
             </nav>
         </footer> 
     </main>
