--- a/side-bar.html
+++ b/side-bar.html
@@ -9,11 +9,11 @@
 <body>
     <main class="side-bar-container">
        <header class="services">
-            <nav class="navigation-links"> 
-                <a href="#"><img src="/images/close.png" alt="Закрыть сайд-бар"></a>
-                <a href="#"><img src="/images/Group.png" alt="Логотип компании"></a>
-                <a href="#"><img src="/images/search.png" alt="Поиск по сайту" class="navigation-links__third-link"></a>
-            </nav>
+            <ul class="navigation-links">
+                <li class="navigation-links__item"><img src="/images/close.png" alt="Закрыть сайд-бар"></li>
+                <li class="navigation-links__item"><img src="/images/Group.png" alt="Логотип компании"></li>
+                <li class="navigation-links__item"><img src="/images/search.png" alt="Поиск по сайту" class="navigation-links__third-link"></li>  
+            </ul>
             <nav class="navigation-list">
                 <ul class="services-list">
                     <li class="services-list__item services-list__item--active"><a class="services-list__link services-list__link--active" href="#">Ремонт техники</a></li>
@@ -28,20 +28,20 @@
             </nav>
         </header>
         <footer class="contacts">
-            <nav class="contact-links">
-                <a href="#"><img src="/images/call.png" alt="Позвонить нам"></a>
-                <a href="#"><img src="/images/chat.png" alt="Написать нам"></a>
-                <a href="#"><img src="/images/profile.png" alt="Профиль"></a>
-            </nav>
+            <ul class="contact-links">
+                <li class="contact-links__item"><img src="/images/call.png" alt="Позвонить нам"></li>
+                <li class="contact-links__item"><img src="/images/chat.png" alt="Написать нам"></li>
+                <li class="contact-links__item"><img src="/images/profile.png" alt="Профиль"></li>
+            </ul>
             <section class="contact-info"> 
                 <p class="contact-info__mail">mail@cps.com</p>
                 <p class="contact-info__phone">8 800 890 8900</p>
             </section>
-            <nav class="lang-navigation">
-                <a class="lang-navigation__lang-link lang-navigation__lang-link--active" href="#"><span>ru</span></a>
-                <a class="lang-navigation__lang-link" href="#"><span>en</span></a>
-                <a class="lang-navigation__lang-link" href="#"><span>ch</span></a>
-            </nav>
+            <ul class="lang-navigation">
+                <li class="lang-navigation__lang-link lang-navigation__lang-link--active"><span>ru</span></li>
+                <li class="lang-navigation__lang-link"><span>en</span></li>
+                <li class="lang-navigation__lang-link"><span>ch</span></li>
+            </ul>
         </footer> 
     </main>
 </body>
