--- a/slider.html
+++ b/slider.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="maket, figma, slider">
     <link rel="stylesheet" href="slider.css">
-    <title>Sidebar</title>
+    <title>Slider</title>
 </head>
 <body>
     <main class="slider-container">
@@ -17,62 +17,62 @@
         <ul class="brand-list">
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/Lenovo.png" alt="Lenovo" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/Lenovo.png" alt="Lenovo" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/Samsung.png" alt="Samsung" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/Samsung.png" alt="Samsung" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/Apple.png" alt="Apple" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/Apple.png" alt="Apple" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/ViewSonic.png" alt="ViewSonic" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/ViewSonic.png" alt="ViewSonic" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/Bosch.png" alt="Bosch" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/Bosch.png" alt="Bosch" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/hp.png" alt="hp" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/hp.png" alt="hp" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/acer.png" alt="Acer" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/acer.png" alt="Acer" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/Sony.png" alt="Sony" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/Sony.png" alt="Sony" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/Lenovo.png" alt="Lenovo" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/Lenovo.png" alt="Lenovo" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
                 <a href="#" class="brand-item__link">
-                    <img src="/images/Samsung.png" alt="Samsung" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    <img src="/images/Samsung.png" alt="Samsung" class="brand-item__image brand-item__brand-img">
+                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
                 </a>
             </li>
             <li class="brand-item">
