сделала стили для двух оставшихся величин, добавила слушатель событий на показать все/скрыть

--- a/slider.html
+++ b/slider.html
@@ -8,86 +8,92 @@
     <title>Slider</title>
 </head>
 <body>
-    <main class="slider-container">
-        <section class="title"> 
-            <p class="title__content">
-               ремонт техники различных брендов 
-            </p>
-        </section>
-        <ul class="brand-list">
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/Lenovo.png" alt="Lenovo" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/Samsung.png" alt="Samsung" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/Apple.png" alt="Apple" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/ViewSonic.png" alt="ViewSonic" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/Bosch.png" alt="Bosch" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/hp.png" alt="hp" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/acer.png" alt="Acer" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/Sony.png" alt="Sony" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/Lenovo.png" alt="Lenovo" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/Samsung.png" alt="Samsung" class="brand-item__image brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
-                </a>
-            </li>
-            <li class="brand-item">
-                <a href="#" class="brand-item__link">
-                    <img src="/images/Apple.png" alt="Apple" class="brand-item__brand-img">
-                    <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
-                </a>
-            </li>
-        </ul>
-        <button class="button">
-            <img src="/images/expand.png" alt="Up" class="button__image">
-            <span class="button__text">
-                Показать все
-            </span>
-        </button>
-    </main>
+    <div class="page-container">
+        <main class="slider-container">
+            <section class="title"> 
+                <p class="title__content">
+                   ремонт техники различных брендов 
+                </p>
+            </section>
+            <ul class="brand-list brand-list--hidden">
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/Lenovo.png" alt="Lenovo" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/Samsung.png" alt="Samsung" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/Apple.png" alt="Apple" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/ViewSonic.png" alt="ViewSonic" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/Bosch.png" alt="Bosch" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/hp.png" alt="hp" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/acer.png" alt="Acer" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/Sony.png" alt="Sony" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/Lenovo.png" alt="Lenovo" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/Samsung.png" alt="Samsung" class="brand-item__image brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__image brand-item__go-img">
+                    </a>
+                </li>
+                <li class="brand-item">
+                    <a href="#" class="brand-item__link">
+                        <img src="/images/Apple.png" alt="Apple" class="brand-item__brand-img">
+                        <img src="/images/go.png" alt="Go link" class="brand-item__go-img">
+                    </a>
+                </li>
+            </ul>
+            <div class="button-container">
+               <button class="button">
+                    <img src="/images/expand.png" alt="Up" class="button__img">
+                    <span class="button__text">
+                        Показать все
+                    </span>
+                </button> 
+            </div> 
+        </main>
+    </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
