Сделала логику изменения размера экрана при нажатии кнопки, стили свайпер смогла перебить только костылем

--- a/repairSlider.html
+++ b/repairSlider.html
@@ -16,46 +16,46 @@
                    ремонт различных видов техники 
                 </p>
             </section>
-            <section class="swiper">
-                <ul class="repair-list swiper-wrapper">
+            <section class="repair-container swiper">
+                <ul class="repair-list repair-list--hidden swiper-wrapper">
                     <li class="repair-item swiper-slide">
                         <a href="#" class="repair-item__link">
                             <span>Ремонт ноутбуков</span>
-                            <img src="/images/go.png" alt="Go link" class="repair-item__image brand-item__go-img">
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
                         </a>
                     </li>
                     <li class="repair-item swiper-slide">
                         <a href="#" class="repair-item__link">
                             <span>Ремонт планшетов</span>
-                            <img src="/images/go.png" alt="Go link" class="repair-item__image brand-item__go-img">
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
                         </a>
                     </li>
                     <li class="repair-item swiper-slide">
                         <a href="#" class="repair-item__link">
                             <span>Ремонт ПК</span>
-                            <img src="/images/go.png" alt="Go link" class="repair-item__image brand-item__go-img">
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
                         </a>
                     </li>
                     <li class="repair-item swiper-slide">
                         <a href="#" class="repair-item__link">
                             <span>Ремонт мониторов</span>
-                            <img src="/images/go.png" alt="Go link" class="repair-item__image brand-item__go-img">
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
                         </a>
                     </li>
                     <li class="repair-item swiper-slide">
                         <a href="#" class="repair-item__link">
                             <span>Ремонт принтеров</span>
-                            <img src="/images/go.png" alt="Go link" class="repair-item__image brand-item__go-img">
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
                         </a>
                     </li>
                     <li class="repair-item swiper-slide">
                         <a href="#" class="repair-item__link">
                             <span>Ремонт клавиатур</span>
-                            <img src="/images/go.png" alt="Go link" class="repair-item__image brand-item__go-img">
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
                         </a>
                     </li>
                 </ul>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination pagination"></div>
             </section>
             <div class="button-container">
                 <button class="button">
