--- a/repairSlider.html
+++ b/repairSlider.html
@@ -54,6 +54,24 @@
                             <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
                         </a>
                     </li>
+                    <li class="repair-item swiper-slide">
+                        <a href="#" class="repair-item__link">
+                            <span>Ремонт флешек</span>
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
+                        </a>
+                    </li>
+                    <li class="repair-item swiper-slide">
+                        <a href="#" class="repair-item__link">
+                            <span>Ремонт телефонов</span>
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
+                        </a>
+                    </li>
+                    <li class="repair-item swiper-slide">
+                        <a href="#" class="repair-item__link">
+                            <span>Ремонт фотоаппаратов</span>
+                            <img src="/images/go.png" alt="Go link" class="repair-item__image repair-item__go-img">
+                        </a>
+                    </li>
                 </ul>
                 <div class="swiper-pagination pagination"></div>
             </section>
